--- a/.github/workflows/alibabacloud.yml
+++ b/.github/workflows/alibabacloud.yml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   k8s:
-    runs-on: ubuntu-latest
-    environment: production
+    name: release-k8s
+    runs-on: ubuntu-20.04
 
     steps:
       - name: Checkout
