--- a/.github/workflows/alibabacloud.yml
+++ b/.github/workflows/alibabacloud.yml
@@ -16,20 +16,14 @@ jobs:
         uses: actions/checkout@v2
 
       # Set ACK context
-      #- name: Set K8s context
-      #  uses: aliyun/ack-set-context@v1
-      #  with:
-      #    access-key-id: "${{ secrets.ACCESS_KEY_ID }}"
-      #    access-key-secret: "${{ secrets.ACCESS_KEY_SECRET }}"
-      #    cluster-id: "${{ secrets.ACK_CLUSTER_ID }}"
+      - name: Set K8s context
+        uses: aliyun/ack-set-context@v1
+        with:
+          access-key-id: "${{ secrets.ACCESS_KEY_ID }}"
+          access-key-secret: "${{ secrets.ACCESS_KEY_SECRET }}"
+          cluster-id: "${{ secrets.ACK_CLUSTER_ID }}"
 
       # Deploy the SRS image to the ACK cluster
-      - name: Setup KUBCONFIG for Aliyun ACK
-        run: |-
-          KUBECONFIG=$RUNNER_TEMP/kubeconfig_$(date +%s)
-          echo "${{ secrets.KUBCONFIG }}" > $KUBECONFIG
-          echo "KUBECONFIG=$KUBECONFIG" >> $GITHUB_ENV
-
       - name: Deploy SRS image
         run: |-
           ls -lh srs.yaml
