--- a/.github/workflows/alibabacloud.yml
+++ b/.github/workflows/alibabacloud.yml
@@ -26,8 +26,9 @@ jobs:
       # Deploy SRS image
       - name: Deploy SRS image
         run: |-
-          kubectl get deploy
-          #kubectl apply -f srs.yaml
-          #kubectl get svc/srs-service
+          kubectl apply -f srs.yaml
+          kubectl get deploy/srs-deployment
+          kubectl get svc/srs-service
           EIP=$(kubectl get svc/srs-service |grep srs-service |awk '{print $4}')
-          echo "http://${EIP}:8080"
+          echo "Website:"
+          echo "  http://${EIP}:8080"
