--- a/srs.yaml
+++ b/srs.yaml
@@ -1,3 +1,33 @@
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: srs-config
+data:
+  srs.conf: |-
+    listen              1935;
+    max_connections     1000;
+    daemon              off;
+    http_api {
+        enabled         on;
+        listen          1985;
+    }
+    http_server {
+        enabled         on;
+        listen          8080;
+    }
+    vhost __defaultVhost__ {
+        http_remux {
+            enabled     on;
+        }
+        hls {
+            enabled         on;
+            hls_dispose     30;
+        }
+    }
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,6 +44,10 @@ spec:
       labels:
         app: srs
     spec:
+      volumes:
+      - name: config-volume
+        configMap:
+          name: srs-config
       containers:
       - name: srs
         image: ossrs/srs:3
@@ -21,6 +55,9 @@ spec:
         - containerPort: 1935
         - containerPort: 1985
         - containerPort: 8080
+        volumeMounts:
+        - name: config-volume
+          mountPath: /usr/local/srs/conf
 
 ---
 
